--- a/index.html
+++ b/index.html
@@ -12,25 +12,33 @@
 
 </head>
 <body>
-  <section>
-    <div class="col-md-12">
-      <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6 conteudo">
-          
+  <section class="mt-5">
+    <div class="conteudo container">
+      <div class="card">
+        <img src="assets/images/illustration-article.svg" class="card-img-top mt-4" alt="...">
+        <div class="card-body">
+          <div class="tag mt-2">
+            <span><b>Learning</b></span>
+          </div>
+          <div class="published mt-2">
+            <span><b>Published 21 Dec 2023</b></span>
+          </div>
+          <div class="card-title mt-3">
+            <a href="#"><b>HTML & CSS foundations</b></a>
+          </div>
+          <p class="card-text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
         </div>
-        <div class="col-md-3"></div>
       </div>
     </div>
   </section>
 
-  <!-- Learning
+  <!-- 
 
-  Published 21 Dec 2023
+  
 
-  HTML & CSS foundations
+  
 
-  These languages are the backbone of every website, defining structure, content, and presentation.
+  
 
   Greg Hooper -->
   
