--- a/index.html
+++ b/index.html
@@ -27,21 +27,16 @@
             <a href="#"><b>HTML & CSS foundations</b></a>
           </div>
           <p class="card-text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+          <div class="author">
+            <div class="img-author">
+              <img src="assets/images/image-avatar.webp" alt="Author">
+            </div>
+            <span><b>Greg Hooper</b></span>
+          </div>
         </div>
       </div>
     </div>
   </section>
-
-  <!-- 
-
-  
-
-  
-
-  
-
-  Greg Hooper -->
-  
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
